--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
               <a href="Rodriguez.pdf" class="btn active" download
                 >Download CV</a
               >
-              <a href="#" class="btn">Contacts </a>
+              <a href="#contact-container2" class="btn">Contacts </a>
             </div>
             <div class="aboutme">
               <label>Social Media:</label>
@@ -116,6 +116,9 @@
               <br />
               <textarea name="" id="" cols="72" rows="8"></textarea>
               <input type="submit" class="submit-btn" />
+              <footer>
+                <p>&copy; 2024 SALAZAR. All Rights Reserved.</p>
+              </footer>
             </div>
           </div>
         </div>
